--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>My First App</title>
+        <title>Hackathon-ASEB</title>
         <link rel="stylesheet" href="./style.css" type="text/css" >
     </head>
     <body>
